# embedded-bluetooth-server

./: .gitignore  Cargo.toml  readme.md
auxiliary/: Cargo.toml
auxiliary/src/: lib.rs
src/: main.rs
